<resources>
    <string name="app_name">Total Balance</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="btn_login">Login</string>
    <string name="total_balance_logo">Total Balance logo</string>
    <string name="text_label_1">Dashboard</string>
    <string name="text_label_2">Wallets</string>
    <string name="text_label_3">Info</string>
    <string name="add_wallet">Agregar wallet</string>
    <string name="amount">Monto</string>
    <string name="wallet_name">Nombre de la wallet</string>
    <string name="currency_hint">Selecciona una moneda</string>
    <string name="save">Guardar</string>
    <string name="dashboard_title">Saldo total</string>
    <string name="logout">Logout</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="more_options">Más opciones</string>
    <string name="confirm_delete">Eliminar wallet</string>
    <string name="are_you_sure_delete_wallet">¿Deseás eliminar la wallet?</string>
    <string name="cancel">Cancelar</string>
    <string name="wallet_deleted">Wallet eliminada</string>
    <string name="no_wallets_message">Aún no agregaste ninguna billetera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallet_updated">Wallet actualizada</string>
    <string name="complete_all_fields">Por favor completa todos los campos</string>
    <string name="saving_changes">Guardando cambios</string>
</resources>